; ModuleID = '/home/carl/AnghaBench/h2o/deps/quicly/t/extr_sentmap.c_on_acked.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/quicly/t/extr_sentmap.c_on_acked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_quicly_conn_t = type { i32 }

@on_acked_callcnt = common dso_local global i32 0, align 4
@QUICLY_SENTMAP_EVENT_ACKED = common dso_local global i64 0, align 8
@on_acked_ackcnt = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.st_quicly_conn_t*, i32*, i32*, i64)* @on_acked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @on_acked(%struct.st_quicly_conn_t* %0, i32* %1, i32* %2, i64 %3) #0 {
  %5 = alloca %struct.st_quicly_conn_t*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  store %struct.st_quicly_conn_t* %0, %struct.st_quicly_conn_t** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load i32, i32* @on_acked_callcnt, align 4
  %10 = add nsw i32 %9, 1
  store i32 %10, i32* @on_acked_callcnt, align 4
  %11 = load i64, i64* %8, align 8
  %12 = load i64, i64* @QUICLY_SENTMAP_EVENT_ACKED, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %4
  %15 = load i32, i32* @on_acked_ackcnt, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* @on_acked_ackcnt, align 4
  br label %17

17:                                               ; preds = %14, %4
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
